--- a/train.ipynb
+++ b/train.ipynb
@@ -22,9 +22,11 @@
     "print(HOME)\n",
     "\n",
     "!export MAKEFLAGS=\"-j$(nproc)\"\n",
+    "!pip show basicsr || pip install git+https://github.com/XPixelGroup/BasicSR\n",
     "!pip install diffusers transformers accelerate xformers huggingface_hub[hf_transfer] hf_transfer \\\n",
-    "    pillow insightface opencv-python apex gradio onnxruntime-gpu timm flash-attn pickleshare \\\n",
-    "    SentencePiece git+https://github.com/XPixelGroup/BasicSR ftfy einops facexlib fire onnx onnxruntime-gpu"
+    "    pillow insightface opencv-python apex gradio onnxruntime-gpu timm pickleshare \\\n",
+    "    SentencePiece ftfy einops facexlib fire onnx onnxruntime-gpu\n",
+    "!pip install flash-attn"
    ]
   },
   {
@@ -49,29 +51,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!sudo apt-get update && sudo apt-get install aria2 -y\n",
-    "!mkdir dataset\n",
-    "%cd dataset\n",
-    "!aria2c --disable-ipv6=true --enable-dht6=false \"magnet:?xt=urn:btih:8B248C2582A4DCC6E211429D6A3A45F72C1323A2&dn=The+Lord+of+the+Rings+The+War+of+the+Rohirrim+%282024%29+%5B1080p%5D+%5BWEBRip%5D&tr=http%3A%2F%2Fp4p.arenabg.com%3A1337%2Fannounce&tr=udp%3A%2F%2F47.ip-51-68-199.eu%3A6969%2Fannounce&tr=udp%3A%2F%2F9.rarbg.me%3A2780%2Fannounce&tr=udp%3A%2F%2F9.rarbg.to%3A2710%2Fannounce&tr=udp%3A%2F%2F9.rarbg.to%3A2730%2Fannounce&tr=udp%3A%2F%2F9.rarbg.to%3A2920%2Fannounce&tr=udp%3A%2F%2Fopen.stealth.si%3A80%2Fannounce&tr=udp%3A%2F%2Fopentracker.i2p.rocks%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.coppersurfer.tk%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.cyberia.is%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.dler.org%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.internetwarriors.net%3A1337%2Fannounce&tr=udp%3A%2F%2Ftracker.leechers-paradise.org%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.openbittorrent.com%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.opentrackr.org%3A1337&tr=udp%3A%2F%2Ftracker.pirateparty.gr%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.tiny-vps.com%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.torrent.eu.org%3A451%2Fannounce\"\n",
-    "%cd .."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "!pip install torrentp nest_asyncio\n",
     "\n",
-    "import os, shutil, random, string\n",
+    "import os, shutil, random, string, asyncio\n",
+    "from torrentp import TorrentDownloader\n",
+    "import nest_asyncio\n",
+    "nest_asyncio.apply()\n",
     "\n",
+    "os.makedirs('data', exist_ok=True)\n",
     "vids_folder = \"./data/vids\"\n",
     "\n",
     "def randStr():\n",
     "    return ''.join(random.choices(string.ascii_letters, k=8))\n",
     "\n",
-    "def extract_video(source_folder, target_folder):\n",
+    "\n",
+    "async def download(save_path, magnet_uri):\n",
+    "    torrent_file = TorrentDownloader(magnet_uri, save_path=save_path)\n",
+    "    await torrent_file.start_download()\n",
+    "\n",
+    "\n",
+    "def extract_video(source_folder, target_folder, name):\n",
     "    video_extensions = (\".mp4\", \".avi\", \".mkv\", \".mov\", \".flv\", \".wmv\")\n",
     "    os.makedirs(target_folder, exist_ok=True)\n",
     "\n",
@@ -80,39 +79,13 @@
     "            if filename.lower().endswith(video_extensions):\n",
     "                source_path = os.path.join(root, filename)\n",
     "                _, ext = os.path.splitext(filename) # Keep original extension, but give the file a random name\n",
-    "                random_name = randStr() + ext\n",
-    "                destination_path = os.path.join(target_folder, random_name)\n",
+    "                destination_path = os.path.join(target_folder, name+ext)\n",
     "                shutil.move(source_path, destination_path)\n",
-    "                return  # Stop after moving the first found video file\n",
+    "                return ext # Stop after moving the first found video file\n",
     "\n",
     "\n",
-    "from torrentp import TorrentDownloader\n",
-    "import nest_asyncio\n",
-    "nest_asyncio.apply()\n",
-    "\n",
-    "async def main():\n",
-    "    save_path=f'./data{randStr()}' # change to a realistic movie\n",
-    "    magnet_uri = \"magnet:?xt=urn:btih:8B248C2582A4DCC6E211429D6A3A45F72C1323A2&dn=The+Lord+of+the+Rings+The+War+of+the+Rohirrim+%282024%29+%5B1080p%5D+%5BWEBRip%5D&tr=http%3A%2F%2Fp4p.arenabg.com%3A1337%2Fannounce&tr=udp%3A%2F%2F47.ip-51-68-199.eu%3A6969%2Fannounce&tr=udp%3A%2F%2F9.rarbg.me%3A2780%2Fannounce&tr=udp%3A%2F%2F9.rarbg.to%3A2710%2Fannounce&tr=udp%3A%2F%2F9.rarbg.to%3A2730%2Fannounce&tr=udp%3A%2F%2F9.rarbg.to%3A2920%2Fannounce&tr=udp%3A%2F%2Fopen.stealth.si%3A80%2Fannounce&tr=udp%3A%2F%2Fopentracker.i2p.rocks%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.coppersurfer.tk%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.cyberia.is%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.dler.org%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.internetwarriors.net%3A1337%2Fannounce&tr=udp%3A%2F%2Ftracker.leechers-paradise.org%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.openbittorrent.com%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.opentrackr.org%3A1337&tr=udp%3A%2F%2Ftracker.pirateparty.gr%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.tiny-vps.com%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.torrent.eu.org%3A451%2Fannounce\"\n",
-    "    torrent_file = TorrentDownloader(magnet_uri, save_path=save_path)\n",
-    "    await torrent_file.start_download()    \n",
-    "    extract_video(save_path, vids_folder)\n",
-    "    shutil.rmtree(save_path, ignore_errors=True)\n",
-    "\n",
-    "await main()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import asyncio\n",
-    "import nest_asyncio\n",
-    "nest_asyncio.apply()\n",
-    "\n",
-    "async def extract_frames():\n",
-    "    mkdir_cmd = [\"mkdir\", \"-p\", \"./data/vids/frames/lEHtAIqM\"]\n",
+    "async def extract_frames(name, vid_path):\n",
+    "    mkdir_cmd = [\"mkdir\", \"-p\", f\"./data/frames/{name}\"]\n",
     "    proc_mkdir = await asyncio.create_subprocess_exec(*mkdir_cmd)\n",
     "    await proc_mkdir.wait()\n",
     "\n",
@@ -120,97 +93,29 @@
     "        \"ffmpeg\",\n",
     "        \"-c:v\", \"h264_cuvid\",\n",
     "        \"-threads\", \"32\",\n",
-    "        \"-i\", \"./data/vids/lEHtAIqM.mp4\",\n",
+    "        \"-i\", vid_path,\n",
     "        \"-vf\", \"select='not(mod(n,50))'\",\n",
     "        \"-vsync\", \"0\",\n",
-    "        \"./data/vids/frames/lEHtAIqM/frame_%04d.jpg\"\n",
+    "        f\"./data/frames/{name}/frame_%04d.jpg\"\n",
     "    ]\n",
     "    proc_ffmpeg = await asyncio.create_subprocess_exec(*ffmpeg_cmd)\n",
     "    await proc_ffmpeg.wait()\n",
     "\n",
+    "\n",
     "async def main():\n",
-    "    await extract_frames()\n",
-    "    print(\"FFmpeg command finished.\")\n",
+    "    name = \"tXFdABMI\"\n",
+    "    save_path=f'./data/{name}'\n",
+    "    magnet_uri = \"magnet:?xt=urn:btih:D7A46713EAEE18C746B3254B7D1492A50FD9D6CE&dn=The+Matrix+%281999%29+1080p+BrRip+x264+-+1.85GB+-+YIFY&tr=http%3A%2F%2Fp4p.arenabg.com%3A1337%2Fannounce&tr=udp%3A%2F%2F47.ip-51-68-199.eu%3A6969%2Fannounce&tr=udp%3A%2F%2F9.rarbg.me%3A2780%2Fannounce&tr=udp%3A%2F%2F9.rarbg.to%3A2710%2Fannounce&tr=udp%3A%2F%2F9.rarbg.to%3A2730%2Fannounce&tr=udp%3A%2F%2F9.rarbg.to%3A2920%2Fannounce&tr=udp%3A%2F%2Fopen.stealth.si%3A80%2Fannounce&tr=udp%3A%2F%2Fopentracker.i2p.rocks%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.coppersurfer.tk%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.cyberia.is%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.dler.org%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.internetwarriors.net%3A1337%2Fannounce&tr=udp%3A%2F%2Ftracker.leechers-paradise.org%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.openbittorrent.com%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.opentrackr.org%3A1337&tr=udp%3A%2F%2Ftracker.pirateparty.gr%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.tiny-vps.com%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.torrent.eu.org%3A451%2Fannounce\"\n",
+    "    await download(save_path, magnet_uri)\n",
+    "    ext = extract_video(save_path, vids_folder, name)\n",
+    "    ext = '.mp4'\n",
+    "    vid_path = f\"./data/vids/{name + ext}\"\n",
+    "    await extract_frames(name, vid_path)\n",
+    "    shutil.rmtree(save_path, ignore_errors=True)\n",
+    "    os.remove(vid_path)\n",
+    "    print('finished processing')\n",
     "\n",
-    "await main()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#!/usr/bin/env python3\n",
-    "import os\n",
-    "import subprocess\n",
-    "\n",
-    "def main():\n",
-    "    # 1) Ensure output folder exists\n",
-    "    os.makedirs(\"./data/vids/frames/lEHtAIqM\", exist_ok=True)\n",
-    "\n",
-    "    # 2) Build ffmpeg command\n",
-    "    cmd = [\n",
-    "        \"ffmpeg\",\n",
-    "        \"-c:v\", \"h264_cuvid\",        # GPU decode for H.264\n",
-    "        \"-threads\", \"32\",            # Use up to 32 threads\n",
-    "        \"-i\", \"./data/vids/lEHtAIqM.mp4\",\n",
-    "        \"-vf\", \"select='not(mod(n,50))'\",  # Extract every 50th frame\n",
-    "        \"-vsync\", \"0\",\n",
-    "        \"-f\", \"image2pipe\",          # Output images to a pipe\n",
-    "        \"-vcodec\", \"mjpeg\",          # MJPEG-encoded frames\n",
-    "        \"pipe:1\"                     # Write to stdout\n",
-    "    ]\n",
-    "\n",
-    "    # 3) Launch ffmpeg\n",
-    "    proc = subprocess.Popen(cmd, stdout=subprocess.PIPE, stderr=subprocess.DEVNULL, bufsize=4096)\n",
-    "\n",
-    "    def read_jpeg(stream):\n",
-    "        \"\"\"\n",
-    "        Reads bytes from 'stream' until we find a complete JPEG\n",
-    "        (start marker 0xFFD8, end marker 0xFFD9).\n",
-    "        Returns the JPEG bytes or None if EOF.\n",
-    "        \"\"\"\n",
-    "        data = bytearray()\n",
-    "        found_start = False\n",
-    "\n",
-    "        while True:\n",
-    "            chunk = stream.read(1)\n",
-    "            if not chunk:  # EOF\n",
-    "                return None\n",
-    "            data.append(chunk[0])\n",
-    "\n",
-    "            # Check last two bytes\n",
-    "            if len(data) >= 2:\n",
-    "                # 0xFFD8 = start of JPEG\n",
-    "                if data[-2:] == b'\\xff\\xd8':\n",
-    "                    found_start = True\n",
-    "                # 0xFFD9 = end of JPEG\n",
-    "                if found_start and data[-2:] == b'\\xff\\xd9':\n",
-    "                    return bytes(data)\n",
-    "\n",
-    "    frame_index = 0\n",
-    "\n",
-    "    # 4) Read frames in a loop\n",
-    "    while True:\n",
-    "        frame_data = read_jpeg(proc.stdout)\n",
-    "        if frame_data is None:\n",
-    "            # No more frames / EOF\n",
-    "            break\n",
-    "\n",
-    "        # Save each frame as frame_0000.jpg, frame_0001.jpg, etc.\n",
-    "        out_path = f\"./data/vids/frames/lEHtAIqM/frame_{frame_index:04d}.jpg\"\n",
-    "        with open(out_path, \"wb\") as f:\n",
-    "            f.write(frame_data)\n",
-    "        frame_index += 1\n",
-    "\n",
-    "    proc.stdout.close()\n",
-    "    proc.wait()\n",
-    "\n",
-    "    print(f\"Done. Extracted {frame_index} frames into ./data/vids/frames/lEHtAIqM\")\n",
-    "\n",
-    "if __name__ == \"__main__\":\n",
-    "    main()\n"
+    "await main()"
    ]
   },
   {
