--- a/train.ipynb
+++ b/train.ipynb
@@ -51,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install torrentp nest_asyncio\n",
+    "# !pip install torrentp nest_asyncio\n",
     "\n",
     "import os, shutil, random, string, asyncio\n",
     "from torrentp import TorrentDownloader\n",
@@ -78,37 +78,38 @@
     "        for filename in files:\n",
     "            if filename.lower().endswith(video_extensions):\n",
     "                source_path = os.path.join(root, filename)\n",
-    "                _, ext = os.path.splitext(filename) # Keep original extension, but give the file a random name\n",
+    "                _, ext = os.path.splitext(filename)\n",
     "                destination_path = os.path.join(target_folder, name+ext)\n",
     "                shutil.move(source_path, destination_path)\n",
     "                return ext # Stop after moving the first found video file\n",
     "\n",
     "\n",
     "async def extract_frames(name, vid_path):\n",
-    "    mkdir_cmd = [\"mkdir\", \"-p\", f\"./data/frames/{name}\"]\n",
+    "    mkdir_cmd = [\"mkdir\", \"-p\", f\"./data/raw_frames/{name}\"]\n",
     "    proc_mkdir = await asyncio.create_subprocess_exec(*mkdir_cmd)\n",
     "    await proc_mkdir.wait()\n",
     "\n",
     "    ffmpeg_cmd = [\n",
     "        \"ffmpeg\",\n",
+    "        \"-hwaccel\", \"cuda\",\n",
     "        \"-c:v\", \"h264_cuvid\",\n",
-    "        \"-threads\", \"32\",\n",
     "        \"-i\", vid_path,\n",
     "        \"-vf\", \"select='not(mod(n,50))'\",\n",
+    "        \"-q:v\", \"2\",\n",
     "        \"-vsync\", \"0\",\n",
-    "        f\"./data/frames/{name}/frame_%04d.jpg\"\n",
+    "        \"-threads\", \"0\",\n",
+    "        f\"./data/raw_frames/{name}/frame_%04d.jpg\"\n",
     "    ]\n",
     "    proc_ffmpeg = await asyncio.create_subprocess_exec(*ffmpeg_cmd)\n",
     "    await proc_ffmpeg.wait()\n",
     "\n",
     "\n",
     "async def main():\n",
-    "    name = \"tXFdABMI\"\n",
+    "    name = randStr()\n",
     "    save_path=f'./data/{name}'\n",
     "    magnet_uri = \"magnet:?xt=urn:btih:D7A46713EAEE18C746B3254B7D1492A50FD9D6CE&dn=The+Matrix+%281999%29+1080p+BrRip+x264+-+1.85GB+-+YIFY&tr=http%3A%2F%2Fp4p.arenabg.com%3A1337%2Fannounce&tr=udp%3A%2F%2F47.ip-51-68-199.eu%3A6969%2Fannounce&tr=udp%3A%2F%2F9.rarbg.me%3A2780%2Fannounce&tr=udp%3A%2F%2F9.rarbg.to%3A2710%2Fannounce&tr=udp%3A%2F%2F9.rarbg.to%3A2730%2Fannounce&tr=udp%3A%2F%2F9.rarbg.to%3A2920%2Fannounce&tr=udp%3A%2F%2Fopen.stealth.si%3A80%2Fannounce&tr=udp%3A%2F%2Fopentracker.i2p.rocks%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.coppersurfer.tk%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.cyberia.is%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.dler.org%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.internetwarriors.net%3A1337%2Fannounce&tr=udp%3A%2F%2Ftracker.leechers-paradise.org%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.openbittorrent.com%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.opentrackr.org%3A1337&tr=udp%3A%2F%2Ftracker.pirateparty.gr%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.tiny-vps.com%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.torrent.eu.org%3A451%2Fannounce\"\n",
     "    await download(save_path, magnet_uri)\n",
     "    ext = extract_video(save_path, vids_folder, name)\n",
-    "    ext = '.mp4'\n",
     "    vid_path = f\"./data/vids/{name + ext}\"\n",
     "    await extract_frames(name, vid_path)\n",
     "    shutil.rmtree(save_path, ignore_errors=True)\n",
@@ -116,6 +117,226 @@
     "    print('finished processing')\n",
     "\n",
     "await main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os, glob, cv2, insightface\n",
+    "import numpy as np\n",
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "from sklearn.metrics.pairwise import euclidean_distances\n",
+    "from math import ceil\n",
+    "from sklearn.cluster import DBSCAN, KMeans\n",
+    "\n",
+    "# ----------------------------------------\n",
+    "# 1) Face detection & embedding setup\n",
+    "# ----------------------------------------\n",
+    "face_analysis = insightface.app.FaceAnalysis()\n",
+    "face_analysis.prepare(ctx_id=0, det_size=(640,640), det_thresh=0.76)\n",
+    "\n",
+    "def get_face(image_path):\n",
+    "    \"\"\"\n",
+    "    Returns metadata for the best face in the image, or None if no face.\n",
+    "    Best face is the one with the lowest sum of pairwise cos sims among all faces in the frame (the most unique).\n",
+    "    \"\"\"\n",
+    "    img = cv2.imread(image_path)\n",
+    "    if img is None:\n",
+    "        return None\n",
+    "    \n",
+    "    faces = face_analysis.get(img)\n",
+    "    if len(faces) == 0:\n",
+    "        return None\n",
+    "\n",
+    "    if len(faces) == 1:\n",
+    "        return extract_metadata(faces[0], image_path)\n",
+    "\n",
+    "    embeddings = []\n",
+    "    for f in faces:\n",
+    "        # face.normed_embedding is a 512-D vector\n",
+    "        emb = f.normed_embedding.reshape(1, -1)  # shape (1, 512)\n",
+    "        embeddings.append(emb)\n",
+    "    embeddings = np.vstack(embeddings)  # shape (num_faces, 512)\n",
+    "    sums = cosine_similarity(embeddings).sum(axis=1)\n",
+    "    idx_min = np.argmin(sums)\n",
+    "    return extract_metadata(faces[idx_min], image_path)\n",
+    "\n",
+    "def extract_metadata(face_obj, image_path):\n",
+    "    return {\n",
+    "        \"image_path\": image_path,\n",
+    "        \"bbox\": [face_obj.bbox.astype(int)],\n",
+    "        \"embedding\": face_obj.normed_embedding.tolist(), # shape (512,)\n",
+    "    }\n",
+    "\n",
+    "# ----------------------------------------\n",
+    "# 2) Collect metadata from frames\n",
+    "# ----------------------------------------\n",
+    "def get_frames(frames_folder):\n",
+    "    metadata = []\n",
+    "    frame_paths = sorted(glob.glob(os.path.join(frames_folder, \"*.jpg\")))\n",
+    "    for path in frame_paths:\n",
+    "        face_data = get_face(path)\n",
+    "        if face_data is None:\n",
+    "            os.remove(path)\n",
+    "        else:\n",
+    "            metadata.append(face_data)\n",
+    "    return metadata\n",
+    "\n",
+    "# ----------------------------------------\n",
+    "# 3) Clustering by character\n",
+    "# ----------------------------------------\n",
+    "def cluster(\n",
+    "    face_metadata,\n",
+    "    eps=0.8,\n",
+    "    min_samples=10,\n",
+    "    max_cluster_size=10000,\n",
+    "    merge_centroid_dist=0.3\n",
+    "):\n",
+    "    \"\"\"\n",
+    "    1) DBSCAN to form initial clusters.\n",
+    "    2) Merge clusters whose centroids are within 'merge_centroid_dist'.\n",
+    "    3) Split large clusters using K-means if > max_cluster_size.\n",
+    "    \n",
+    "    face_metadata: list of dict, each with 'embedding': list[float], 'image_path', ...\n",
+    "    eps: DBSCAN eps (bigger => merges more frames into same cluster).\n",
+    "    min_samples: DBSCAN min_samples (small => easier to form a cluster).\n",
+    "    max_cluster_size: after clustering, if a cluster has > max_cluster_size frames, we split it.\n",
+    "    merge_centroid_dist: if centroids of two clusters are closer than this, merge them.\n",
+    "    \"\"\"\n",
+    "    embeddings = np.array([item[\"embedding\"] for item in face_metadata])\n",
+    "\n",
+    "    # Step 1: DBSCAN\n",
+    "    db = DBSCAN(eps=eps, min_samples=min_samples, metric='euclidean', n_jobs=-1)\n",
+    "    labels = db.fit_predict(embeddings)\n",
+    "\n",
+    "    # Collect cluster members\n",
+    "    clusters_dict = {}\n",
+    "    for idx, label in enumerate(labels):\n",
+    "        if label == -1:\n",
+    "            continue  # noise\n",
+    "        clusters_dict.setdefault(label, []).append(idx)\n",
+    "\n",
+    "    # Convert to a list of clusters\n",
+    "    clusters = list(clusters_dict.values())\n",
+    "\n",
+    "    if not clusters:\n",
+    "        return []\n",
+    "\n",
+    "    # Step 2: Merge cluster centroids if they are too close\n",
+    "    #   - Compute centroid of each cluster\n",
+    "    centroids = []\n",
+    "    for c in clusters:\n",
+    "        emb_c = embeddings[c]\n",
+    "        centroid = emb_c.mean(axis=0)\n",
+    "        centroids.append(centroid)\n",
+    "    centroids = np.array(centroids)  # shape (num_clusters, emb_dim)\n",
+    "\n",
+    "    #   - Compute distance matrix between centroids\n",
+    "    dist_mat = euclidean_distances(centroids, centroids)\n",
+    "    #   - Merge clusters if distance < merge_centroid_dist\n",
+    "    #     We'll do a simple union-find or BFS approach\n",
+    "    visited = [False]*len(clusters)\n",
+    "    merged_clusters = []\n",
+    "\n",
+    "    def dfs(idx, group):\n",
+    "        stack = [idx]\n",
+    "        while stack:\n",
+    "            node = stack.pop()\n",
+    "            if visited[node]:\n",
+    "                continue\n",
+    "            visited[node] = True\n",
+    "            group.append(node)\n",
+    "            # check neighbors\n",
+    "            for nbr in range(len(clusters)):\n",
+    "                if not visited[nbr] and dist_mat[node, nbr] < merge_centroid_dist:\n",
+    "                    stack.append(nbr)\n",
+    "\n",
+    "    for i in range(len(clusters)):\n",
+    "        if not visited[i]:\n",
+    "            group = []\n",
+    "            dfs(i, group)\n",
+    "            merged_clusters.append(group)\n",
+    "\n",
+    "    # merged_clusters is now a list of lists of cluster indices to merge\n",
+    "    final_merged = []\n",
+    "    for group in merged_clusters:\n",
+    "        # union of all frames from those clusters\n",
+    "        merged_frames = []\n",
+    "        for ci in group:\n",
+    "            merged_frames.extend(clusters[ci])\n",
+    "        final_merged.append(merged_frames)\n",
+    "\n",
+    "    # Step 3: For each merged cluster, if it's > max_cluster_size, split via K-means\n",
+    "    final_clusters = []\n",
+    "    for frames in final_merged:\n",
+    "        if len(frames) <= max_cluster_size:\n",
+    "            final_clusters.append(frames)\n",
+    "        else:\n",
+    "            # sub-cluster with K-means\n",
+    "            n_sub = ceil(len(frames)/max_cluster_size)\n",
+    "            sub_embeddings = embeddings[frames]\n",
+    "            km = KMeans(n_clusters=n_sub, random_state=42, n_init=10)\n",
+    "            sub_labels = km.fit_predict(sub_embeddings)\n",
+    "\n",
+    "            for sub_label in range(n_sub):\n",
+    "                sub_indices = [frames[i] for i, sl in enumerate(sub_labels) if sl == sub_label]\n",
+    "                # optional: discard if < min_samples\n",
+    "                if len(sub_indices) >= min_samples:\n",
+    "                    final_clusters.append(sub_indices)\n",
+    "                # else: either discard or merge with nearest sub-cluster (not shown)\n",
+    "\n",
+    "    return final_clusters\n",
+    "\n",
+    "\n",
+    "frames_folder = \"./data/raw_frames/test\"\n",
+    "metadata = get_frames(frames_folder)\n",
+    "print(f\"Collected {len(metadata)} face entries.\")\n",
+    "face_clusters = cluster(metadata)\n",
+    "min_size, max_size = 10, 32\n",
+    "filtered_clusters = [cluster for cluster in face_clusters if len(cluster) >= min_size]\n",
+    "clusters = [random.sample(cluster, min(len(cluster), max_size)) for cluster in filtered_clusters]\n",
+    "for i, c in enumerate(clusters):\n",
+    "    print(f\"Cluster {i} has {len(c)} items.\")\n",
+    "# Image.open(metadata[clusters[8][0]]['image_path'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot a cluster sample\n",
+    "import random, math\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.image as mpimg\n",
+    "\n",
+    "def display_cluster_images(cluster, face_metadata, images_per_row=5, max_images=30):\n",
+    "    if len(cluster) > max_images:\n",
+    "        cluster = random.sample(cluster, max_images)\n",
+    "\n",
+    "    num_images = len(cluster)\n",
+    "    num_rows = math.ceil(num_images / images_per_row)\n",
+    "    fig, axes = plt.subplots(num_rows, images_per_row, figsize=(15, 3 * num_rows))\n",
+    "    axes = axes.flatten()\n",
+    "\n",
+    "    for ax, idx in zip(axes, cluster):\n",
+    "        img_path = face_metadata[idx]['image_path']\n",
+    "        img = mpimg.imread(img_path)\n",
+    "        ax.imshow(img)\n",
+    "        ax.axis('off')\n",
+    "\n",
+    "    for ax in axes[num_images:]:\n",
+    "        ax.axis('off')\n",
+    "\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
+    "\n",
+    "\n",
+    "display_cluster_images(face_clusters[7], metadata)"
    ]
   },
   {
@@ -146,10 +367,7 @@
     "After training, we also show how to do a \"normal\" text-to-image generation with FluxPipeline.\n",
     "\"\"\"\n",
     "\n",
-    "import os\n",
-    "import requests\n",
-    "import cv2\n",
-    "import torch\n",
+    "import os, requests, cv2, torch\n",
     "import insightface\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
