--- a/train.ipynb
+++ b/train.ipynb
@@ -6,26 +6,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!echo $CUDA_HOME\n",
-    "!which nvcc\n",
-    "%env CUDA_HOME=/usr/local/cuda"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import os\n",
     "HOME = os.getcwd()\n",
     "print(HOME)\n",
     "\n",
     "!export MAKEFLAGS=\"-j$(nproc)\"\n",
-    "!pip show basicsr || pip install git+https://github.com/XPixelGroup/BasicSR\n",
     "!pip install diffusers transformers accelerate xformers huggingface_hub[hf_transfer] hf_transfer \\\n",
     "    pillow insightface opencv-python apex gradio onnxruntime-gpu timm pickleshare \\\n",
     "    SentencePiece ftfy einops facexlib fire onnx onnxruntime-gpu\n",
+    "!pip show basicsr || pip install git+https://github.com/XPixelGroup/BasicSR\n",
     "!pip install flash-attn"
    ]
   },
@@ -62,8 +51,8 @@
     "os.makedirs('data', exist_ok=True)\n",
     "vids_folder = \"./data/vids\"\n",
     "\n",
-    "def randStr():\n",
-    "    return ''.join(random.choices(string.ascii_letters, k=8))\n",
+    "def randStr(length=8):\n",
+    "    return ''.join(random.choices(string.ascii_letters + string.digits, k=length))\n",
     "\n",
     "\n",
     "async def download(save_path, magnet_uri):\n",
@@ -391,7 +380,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "metadata[1520]"
+    "# save to dataset ignoring the defect ones\n",
+    "\n",
+    "def randStr(length=8):\n",
+    "    return ''.join(random.choices(string.ascii_letters + string.digits, k=length))\n",
+    "\n",
+    "bundle = 0\n",
+    "\n",
+    "for i, cluster in enumerate(clusters):\n",
+    "    for idx in tqdm(cluster, desc=f\"Cluster {i}\"):\n",
+    "        if metadata[idx][\"defective\"] == True:\n",
+    "            print(metadata[idx][\"defective\"])\n",
+    "        "
    ]
   },
   {
@@ -400,7 +400,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# plot a cluster sample\n",
+    "os.makedirs(\"./data/dataset/0\", exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# clean up. Convert to avif\n",
+    "import os\n",
+    "\n",
+    "def get_max_folder_number(directory):\n",
+    "    return max((int(d) for d in os.listdir(directory) if d.isdigit() and os.path.isdir(os.path.join(directory, d))), default=None)\n",
+    "\n",
+    "# Example usage\n",
+    "directory_path = \"./t\"\n",
+    "print(get_max_folder_number(directory_path))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot a cluster\n",
     "import random, math\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.image as mpimg\n",
@@ -449,29 +475,6 @@
     "\n",
     "\n",
     "display_cluster_images(clusters[6], metadata)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# plot body bb\n",
-    "import matplotlib.pyplot as plt\n",
-    "from PIL import Image, ImageDraw\n",
-    "\n",
-    "def draw_bbox_on_image(image_path, box):\n",
-    "    im = Image.open(image_path).convert(\"RGB\")\n",
-    "    draw = ImageDraw.Draw(im)\n",
-    "    x1, y1, x2, y2 = map(int, box)\n",
-    "    draw.rectangle((x1, y1, x2, y2), outline=\"red\", width=3)\n",
-    "    plt.imshow(im)\n",
-    "    plt.axis(\"off\")\n",
-    "    plt.show()\n",
-    "\n",
-    "c = metadata[clusters[0][0]]\n",
-    "draw_bbox_on_image(c['image_path'], c['body_bbox'])"
    ]
   },
   {
