--- a/train.ipynb
+++ b/train.ipynb
@@ -381,14 +381,21 @@
    "outputs": [],
    "source": [
     "# save to dataset ignoring the defect ones\n",
+    "import os, json\n",
     "\n",
-    "def randStr(length=8):\n",
-    "    return ''.join(random.choices(string.ascii_letters + string.digits, k=length))\n",
+    "def get_max_folder_number(directory):\n",
+    "    return max((int(d) for d in os.listdir(directory) if d.isdigit() and os.path.isdir(os.path.join(directory, d))), default=None)\n",
     "\n",
-    "bundle = 0\n",
+    "bundle = get_max_folder_number('./data/dataset')\n",
     "\n",
     "for i, cluster in enumerate(clusters):\n",
-    "    for idx in tqdm(cluster, desc=f\"Cluster {i}\"):\n",
+    "    char = get_max_folder_number(f'./data/dataset/{bundle}')\n",
+    "    dir = f'./data/dataset/{bundle}/{char}'\n",
+    "    \n",
+    "    with open(f\"{dir}/data.json\", \"w\") as f: # save cluster metadata with indices correspondig to images\n",
+    "        json.dump(data, f, indent=4)\n",
+    "\n",
+    "    for idx in tqdm(cluster, desc=f\"Cluster {i}\"): # save images as avif\n",
     "        if metadata[idx][\"defective\"] == True:\n",
     "            print(metadata[idx][\"defective\"])\n",
     "        "
@@ -401,23 +408,6 @@
    "outputs": [],
    "source": [
     "os.makedirs(\"./data/dataset/0\", exist_ok=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# clean up. Convert to avif\n",
-    "import os\n",
-    "\n",
-    "def get_max_folder_number(directory):\n",
-    "    return max((int(d) for d in os.listdir(directory) if d.isdigit() and os.path.isdir(os.path.join(directory, d))), default=None)\n",
-    "\n",
-    "# Example usage\n",
-    "directory_path = \"./t\"\n",
-    "print(get_max_folder_number(directory_path))\n"
    ]
   },
   {
